--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
+
+html {
+  scroll-behavior: smooth;
+}
+
 body{
 	margin:0;
 	font-family: 'Open Sans', sans-serif;
